--- a/02-career.qmd
+++ b/02-career.qmd
@@ -32,6 +32,14 @@ A great crop hides a whole story of questions underneath. Curiosity drives farme
 
 # ![](assets/images/briefcase-solid.svg){width="30"} Experience
 
+## Assistant Professor - Pick Family Chair in Sustainable Cropping Systems
+
+### 2023.
+
+{{< fa location-dot >}} Department of Plant Agriculture, University of Guelph, Ontario, Canada.
+
+*Description*: My duties include research, teaching, and knowledge transfer to agriculture stakeholders on identifying soil and crop management practices that enhance farming systems performance while taking care about our natural resources by the hand of science.
+
 ## Postdoctoral Fellow - Digital Agronomy
 
 ### 2022 - 2023.
